--- a/examples/notebooks/poll_rss_feed.ipynb
+++ b/examples/notebooks/poll_rss_feed.ipynb
@@ -8,7 +8,8 @@
    },
    "outputs": [],
    "source": [
-    "from consileon.nlp.rss_scraping import RssScraper\n",
+    "from cbc.nlp.rss_scraping import RssScraper\n",
+    "from cbc.content import FileSystemContentHandler\n",
     "from bs4 import BeautifulSoup as bs"
    ]
   },
@@ -34,10 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "base_dir = \"../sample_data/rss_feeds\""
+    "base_dir = \"../sample_data/rss_feeds\"\n",
+    "\n",
+    "content_handler = FileSystemContentHandler(base_folder=base_dir)"
    ],
    "metadata": {
     "collapsed": false,
@@ -49,15 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creation of the directory ../sample_data/rss_feeds/rki/ failed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rki_urls = [\"https://www.rki.de/SiteGlobals/Functions/RSSFeed/RSSGenerator_nCoV.xml\"]\n",
     "\n",
@@ -68,9 +63,30 @@
     "    text = \"\\n\\n\".join([ p.get_text() for p in content.find_all(['p', 'h', 'h1', 'h2', 'h3', 'title']) ])\n",
     "    return text.strip()\n",
     "\n",
-    "rki = RssScraper(rki_urls, base_dir + \"/rki/\", rki_extractor, 1 * 3600, True)\n",
+    "rki_scraper = RssScraper(\n",
+    "    urls=rki_urls ,\n",
+    "    prefix=\"rki\",\n",
+    "    extractor=rki_extractor,\n",
+    "    time_wait_seconds=1 * 3600,\n",
+    "    content_handler=content_handler\n",
+    ")\n",
     "\n",
-    "rki.pull_once()"
+    "\n",
+    "rki_scraper.pull_once()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "content_handler = FileSystemContentHandler(base_folder=base_dir)"
    ],
    "metadata": {
     "collapsed": false,
@@ -100,9 +116,15 @@
     "    text = \"\\n\\n\".join([ p.get_text() for p in content.find_all(['p', 'h', 'h1', 'h2', 'h3', 'title']) ])\n",
     "    return text.strip()\n",
     "\n",
-    "bw = RssScraper(bw_urls, base_dir + \"/bw/\", bw_extractor, 1 * 3600, True)\n",
+    "bw_scraper = RssScraper(\n",
+    "    urls=bw_urls,\n",
+    "    prefix=\"bw\",\n",
+    "    extractor=bw_extractor,\n",
+    "    time_wait_seconds=1 * 3600,\n",
+    "    content_handler=content_handler\n",
+    ")\n",
     "\n",
-    "bw.pull_once()"
+    "bw_scraper.pull_once()"
    ],
    "metadata": {
     "collapsed": false,
@@ -114,9 +136,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-ab7a5844",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (cbc-nlp (sebastian-sohr))"
   },
   "language_info": {
    "codemirror_mode": {
