--- a/examples/notebooks/rss_preprocessing_pipeline.ipynb
+++ b/examples/notebooks/rss_preprocessing_pipeline.ipynb
@@ -2,17 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /home/sohr/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
-    "import consileon.nlp.pipeline as nlp\n",
-    "import consileon.nlp.rss_scraping as rss"
+    "import cbc.nlp.base as nlp\n",
+    "import cbc.nlp.rss_scraping as rss\n",
+    "from cbc.content import FileSystemContentHandler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -20,15 +30,16 @@
    },
    "outputs": [],
    "source": [
-    "base_dir = \"../sample_data/rss_feeds\"\n",
-    "feeds = [\"bw\", \"rki\"]\n",
-    "file_list = rss.create_rss_file_list(base_dir, feeds)\n",
+    "base_folder = \"../sample_data/rss_feeds\"\n",
+    "content_handler = FileSystemContentHandler(base_folder=base_folder)\n",
+    "channels = [\"bw\", \"rki\"]\n",
+    "file_list = rss.create_rss_file_list(content_handler, channels)\n",
     "target_file = \"../sample_data/rss_tokens.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -37,7 +48,7 @@
    "outputs": [],
    "source": [
     "trafo    = nlp.Lower() * nlp.Remove() * nlp.LemmaTokenizeText()\n",
-    "source   = nlp.XmlSourceGenerator(file_list)\n",
+    "source   = nlp.XmlParser() ** nlp.FileSourceGenerator(file_list, content_handler=content_handler)\n",
     "pipeline = trafo ** source\n",
     "\n",
     "target   = nlp.TokensToFile(target_file)"
@@ -45,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -55,11 +66,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<consileon.nlp.pipeline.TokensToFile at 0x1a16589d248>"
-      ]
+      "text/plain": "<cbc.nlp.base.TokensToFile at 0x7f17cf2f73a0>"
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,9 +87,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-ab7a5844",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (cbc-nlp (sebastian-sohr))"
   },
   "language_info": {
    "codemirror_mode": {
