--- a/examples/notebooks/simple_word2vec.ipynb
+++ b/examples/notebooks/simple_word2vec.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /home/sohr/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
-    "import consileon.nlp.pipeline as nlp\n",
-    "import consileon.nlp.word2vec_tools as w2v"
+    "import cbc.nlp.base as nlp\n",
+    "import cbc.nlp.word2vec_tools as w2v"
    ]
   },
   {
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -34,11 +43,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<consileon.nlp.word2vec_tools.Word2VecWrap at 0x205bc5aae08>"
-      ]
+      "text/plain": "<cbc.nlp.word2vec_tools.Word2VecWrap at 0x7faff5676430>"
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,9 +81,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-ab7a5844",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (cbc-nlp (sebastian-sohr))"
   },
   "language_info": {
    "codemirror_mode": {
