--- a/examples/notebooks/rss_preprocessing_pipeline.ipynb
+++ b/examples/notebooks/rss_preprocessing_pipeline.ipynb
@@ -9,8 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to /home/sohr/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\sohr\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
      ]
     }
    ],
@@ -87,9 +88,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "pycharm-ab7a5844",
+   "name": "pycharm-14e81573",
    "language": "python",
-   "display_name": "PyCharm (cbc-nlp (sebastian-sohr))"
+   "display_name": "PyCharm (knowledge-transfer)"
   },
   "language_info": {
    "codemirror_mode": {
